:bug: fix for landing image too big (#50)
fixes #49

--- a/src/index.css
+++ b/src/index.css
@@ -162,6 +162,18 @@ code {
     }
 }
 
+@media (min-height: 801px) and (max-height: 1000px) {
+    .landing-page-image {
+        max-height: 550px;
+    }
+}
+
+@media (min-height: 1001px) {
+    .landing-page-image {
+        max-height: 750px;
+    }
+}
+
 @media (max-height: 750px) {
     .landing-page-image {
         width: 350px !important;
